# GeniusSDK

./: .clangd  .gitignore  .gitmodules  Readme.MD  Readme.md
.github/workflows/: build-release-tag.yml  cmake.yml
.planning/codebase/: ARCHITECTURE.md  STACK.md  STRUCTURE.md
.planning/notes/: geniussdk-release-packaging-strategy.md
.planning/seeds/: geniussdk-installer-script.md
.planning/todos/pending/: extend-config-cmake-for-consumer-bootstrap.md  multi-config-release-package-with-platform-selector.md
AgentDocs/: CLAUDE.md
cmake/: CommonBuildParameters.cmake  CommonCompilerOptions.CMake  CompilationFlags.cmake  GeniusSDK_Info_Mac.plist  GeniusSDK_Info_ios.plist  config.cmake.in  functions.cmake
cmake/iOS/: CMakeLists.txt
example/: CMakeLists.txt  SDKExample.cpp  SDKExampleCredentials.cpp  SDKIdleExample.cpp  dev_config.json
include/: library.h
src/: CMakeLists.txt  GeniusNodeAPIServiceImpl.cpp  GeniusNodeAPIServiceImpl.hpp  GeniusRpcServer.cpp  GeniusRpcServer.hpp  GeniusSDK.cpp  GeniusSDK.h  GeniusSDKAndroid.cpp  GeniusSDKAndroid.hpp  TransactionBlocks.cpp  TransactionBlocks.h  TransactionData.cpp  TransactionData.h
src/android/: background_config.h
src/proto/: genius_rpc.proto
test/: CMakeLists.txt  GeniusSDKTest.cpp  TransactionBlocksTest.cpp  TransactionDataTest.cpp
